# Tetris

./: README.md
sources/: CMakeLists.txt  Data.cpp  Data.h  Game.cpp  Game.h  GameControl.cpp  GameControl.h  MainDialog.cpp  MainDialog.h  ScoreBoard.cpp  ScoreBoard.h  ScoreControl.cpp  ScoreControl.h  ShapeControl.cpp  ShapeControl.h  main.cpp
